kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
spec:
  replicas: 3  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: hamritha817/github-action-maven-tutorial:tagname:latest  # Specify the Docker image reference
          ports:
            - containerPort: 80  # Adjust the container port as needed
